# 42-python_piscine

./: README.md
P00/: README.md
P00/ex1/: ft_garden_name.py
P00/ex2/: ft_plot_area.py
P00/ex3/: ft_harvest_total.py
P00/ex4/: ft_plant_age.py
P00/ex5/: ft_water_reminder.py
P00/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
P00/ex7/: ft_seed_inventory.py
P01/: README.md
P01/ex0/: ft_garden_intro.py
P01/ex1/: ft_garden_data.py
P01/ex2/: ft_plant_growth.py
P01/ex3/: ft_plant_factory.py
P01/ex4/: ft_garden_security.py
P01/ex5/: ft_plant_types.py
P01/ex6/: ft_garden_analytics.py
P02/ex0/: ft_first_exception.py
P02/ex1/: ft_raise_exception.py
P02/ex2/: ft_different_errors.py
P02/ex3/: ft_custom_errors.py
P02/ex4/: ft_finally_block.py
P03/ex0/: ft_command_quest.py
P03/ex1/: ft_score_analytics.py
P03/ex2/: ft_coordinate_system.py
P03/ex3/: ft_achievement_tracker.py
P03/ex4/: ft_inventory_system.py
P03/ex5/: ft_data_stream.py
P03/ex6/: ft_data_alchemist.py
P04/ex0/: ft_ancient_text.py
P04/ex1/: ft_archive_creation.py
P04/ex2/: ft_stream_management.py
P05/: README.md
P05/ex1/: data_stream.py
P06/: README.md  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
P07/: README.md  battle.py  capacitor.py  tournament.py
P08/: README.md
P08/ex1/: loading.py  pyproject.toml  requirements.txt
P09/: README.md
(+26 files in other folders)
